update Recipe API
